This is now jenkins-neo2-theme.

--- a/less/style.less
+++ b/less/style.less
@@ -336,7 +336,7 @@ td {
 
 .jenkins_ver:after {
   margin-left: 15px;
-  content: 'jenkins-neo-theme v. @@version'
+  content: 'jenkins-neo2-theme v. @@version'
 }
 
 [style^="color:gray"] {
