--- a/less/style.less
+++ b/less/style.less
@@ -44,9 +44,6 @@ h3 {
     font-weight: normal;
 }
 
-#page-body {
-}
-
 #header {
   height: 45px;
   background-color: @color-primary;
@@ -332,6 +329,10 @@ td {
     color: @console-white;
     font-weight: bold;
   }
+}
+
+.ace_content, .ace_content * {
+  font-family:  @font-console, Courier, monospace !important;
 }
 
 .jenkins_ver:after {
