--- a/less/style.less
+++ b/less/style.less
@@ -4,13 +4,10 @@
 @import 'variables';
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,500,300);
 
-// @font-face {
-//     font-family: "custom font";
-//     src: url("custom font url.woff") format('woff');
-// }
 
-* {
-  font-family: @font-primary, sans-serif !important;
+// Only match the same elements which are also present in Jenkins' style.css
+body, table, form, input, td, th, p, textarea, select {
+  font-family: @font-primary, sans-serif;
 }
 
 body, table, form, td, th, p {
