Patch version on travis build.

--- a/less/style.less
+++ b/less/style.less
@@ -335,7 +335,7 @@ td {
 
 .jenkins_ver:after {
   margin-left: 15px;
-  content: 'jenkins-neo2-theme v. @@version'
+  content: 'neo2-theme @@version'
 }
 
 [style^="color:gray"] {
