Fixed contrast for 'Collapsing Console Sections' Plugin

--- a/less/style.less
+++ b/less/style.less
@@ -327,6 +327,13 @@ td {
     color: @console-white;
     font-weight: bold;
   }
+  div.collapseHeader {
+    background-color: @console-white;
+    color: @console-black;
+  }
+  div.collapseAction p {
+    color: @console-white !important;
+  }
 }
 
 .ace_editor, .ace_editor * {
