Remove some rules which don't affect the outcome
Most were selected by visual inspection, so I might have made some
mistakes...

--- a/less/style.less
+++ b/less/style.less
@@ -14,22 +14,17 @@ body, table, form, td, th, p {
   font-size: 14px !important;
 }
 
-body {
-  line-height: 20px !important;
-  background-color: @color-bg;
-}
-
-a, a:hover, a:visited, a:link {
+a, a:visited, a:link {
   text-decoration: none !important;
   color: @color-link;
-  &:hover {
-    text-decoration: underline !important;
-    color: @color-button-hover !important;
-  }
+}
+
+a:hover {
+  text-decoration: underline !important;
+  color: @color-button-hover !important;
 }
 
 h2 {
-    margin-bottom: 0px;
     margin-top: 2em;
     font-weight: normal;
 }
@@ -42,14 +37,9 @@ h3 {
 
 #header {
   background-color: @color-primary;
-  z-index: 1030;
   letter-spacing: 1px;
-  //Custom logo - path here
-  //background: url('logo.png') no-repeat, @color-primary;
-  //background-size: auto 45px, cover; 
 
   .login {
-    top: inherit;
     text-transform: uppercase;
     a {
       font-size: 10px;
@@ -57,13 +47,6 @@ h3 {
     a:hover {
       color: @color-white !important;
     }
-    b {
-      font-weight: 400;
-    }
-    //Custom logo - hide the default images, but retain the link
-    //#jenkins-home-link img {
-    //  opacity: 0;
-    //}
   }
 
   #search-box {
@@ -80,22 +63,9 @@ h3 {
   }
 }
 
-#breadcrumbBar {
-  background-color: transparent;
-}
-
-.top-sticker-inner {
-  background: none repeat scroll 0 0 @color-sticker-bg !important;
-}
-
 #breadcrumbs li:hover,
 A.breadcrumbBarAnchor.mouseIsOverMenuSelector {
   background-color: transparent !important;
-}
-
-#breadcrumbs {
-  color: @color-text !important;
-  text-decoration: none;
 }
 
 #notification-bar{
@@ -111,7 +81,7 @@ A.breadcrumbBarAnchor.mouseIsOverMenuSelector {
 
 .pane-frame {
   border: 0;
-  
+
   &:hover, &.mouseover {
     border: 0 !important;
   }
@@ -160,9 +130,6 @@ table.stripped-odd tr:nth-child(odd) {
 
 #buildHistoryPage {
   .build-search-row {
-    input {
-      padding: 5px;
-    }
     td {
       padding: 0;
     }
