Make notification bar as high as modern Jenkins header

--- a/less/style.less
+++ b/less/style.less
@@ -68,8 +68,8 @@ A.breadcrumbBarAnchor.mouseIsOverMenuSelector {
   background-color: transparent !important;
 }
 
-#notification-bar{
-  height: 50px !important;
+#notification-bar {
+  height: 3.5rem !important;
 }
 
 #executors .pane-content > table tr td:first-child {
