Make section-header styles matter
And only keep those which actually do change something...

--- a/less/style.less
+++ b/less/style.less
@@ -275,10 +275,8 @@ td {
 
 // make headings on the config pages easier to read
 .section-header {
-    font-size: 2em;
+    font-size: 2em !important;
     border-bottom: none !important;
     font-weight: lighter !important;
-    margin-bottom: 0.2em;
-    margin-top: 1.5em !important;
-    padding-bottom: 3px;
+    margin-top: 2rem !important;
 }
