Switch some more sizes to rem units

--- a/less/style.less
+++ b/less/style.less
@@ -25,12 +25,12 @@ a:hover {
 }
 
 h2 {
-    margin-top: 2em;
+    margin-top: 1.75rem;
     font-weight: normal;
 }
 
 h3 {
-    font-size: 3em;
+    font-size: 2.5rem;
     font-weight: normal;
     line-height: normal;
 }
