Fix spinning loader icons (#48)
Fixes #40

--- a/less/style.less
+++ b/less/style.less
@@ -280,3 +280,9 @@ td {
     font-weight: lighter !important;
     margin-top: 2rem !important;
 }
+
+// hide additional spinning loader icon
+// See: https://github.com/TobiX/jenkins-neo2-theme/issues/40
+.icon-red-anime .svg-icon {
+  display: none;
+}
