--- a/less/style.less
+++ b/less/style.less
@@ -283,6 +283,7 @@ td {
 
 // hide additional spinning loader icon
 // See: https://github.com/TobiX/jenkins-neo2-theme/issues/40
+.icon-blue-anime .svg-icon,
 .icon-red-anime .svg-icon {
   display: none;
 }
