--- a/less/style.less
+++ b/less/style.less
@@ -284,6 +284,8 @@ td {
 // hide additional spinning loader icon
 // See: https://github.com/TobiX/jenkins-neo2-theme/issues/40
 .icon-blue-anime .svg-icon,
+.icon-aborted-anime .svg-icon,
+.icon-yellow-anime .svg-icon,
 .icon-red-anime .svg-icon {
   display: none;
 }
