--- a/less/style.less
+++ b/less/style.less
@@ -283,5 +283,8 @@ td {
 
 //jenkins wobal
 //hide "ALL" tab
-.tabBar .tab:last-child{display:none;}
+.tabBar .tab:nth-last-child(2){display:none;}
+
+//hide checkstyle trend and pmd trend
+#description + div + div{display:none;}
 
