--- a/less/style.less
+++ b/less/style.less
@@ -286,5 +286,5 @@ td {
 .tabBar .tab:nth-last-child(2){display:none;}
 
 //hide checkstyle trend and pmd trend
-#description + div + div{display:none;}
+#description + div + div:not(.dashboard){display:none;}
 
