--- a/less/style.less
+++ b/less/style.less
@@ -288,3 +288,5 @@ td {
 //hide checkstyle trend and pmd trend
 #description + div + div:not(.dashboard){display:none;}
 
+//console output illisible
+.console-output{background:var(--pre-background);}
