--- a/less/style.less
+++ b/less/style.less
@@ -283,7 +283,7 @@ td {
 
 //jenkins wobal
 //hide "ALL" tab
-.tabBar .tab:nth-last-child(2){display:none;}
+//.tabBar .tab:nth-last-child(2){display:none;}
 
 //hide checkstyle trend and pmd trend
 #description + div + div:not(.dashboard){display:none;}
