--- a/less/style.less
+++ b/less/style.less
@@ -239,7 +239,7 @@ td {
 .console-output {
   position: relative;
   font-family: @font-console, monospace !important;
-  background: @console-black;
+  background: @console-black!important;
   color: @console-white;
   cursor: text;
   padding: 10px 20px;
